--- a/index.html
+++ b/index.html
@@ -1,65 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SecureAuthAPI - Seamless Authentication for Developers</title>
-<style>
-  body { margin: 0; font-family: Arial, sans-serif; color: #333; }
-  .container { max-width: 1200px; margin: auto; padding: 0 20px; }
-  header, footer { background-color: #036; color: white; text-align: center; padding: 20px 0; }
-  header h1, footer p { margin: 0; }
-  .hero { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 70vh; background: url('hero.jpg') no-repeat center center/cover; color: white; text-align: center; }
-  .hero h2 { font-size: 38px; margin-bottom: 20px; }
-  .hero p { font-size: 18px; margin-bottom: 40px; }
-  .hero a { background-color: #0288D1; color: white; text-decoration: none; padding: 15px 25px; border-radius: 5px; }
-  .features { display: flex; flex-wrap: wrap; justify-content: space-around; padding: 50px 0; }
-  .feature { flex: 1 1 300px; text-align: center; padding: 15px; }
-  .feature h3 { font-size: 24px; margin-bottom: 15px; }
-  .feature p { font-size: 16px; color: #555; }
-  .cta { text-align: center; padding: 50px 0; }
-  .cta a { background-color: #0288D1; color: white; text-decoration: none; padding: 15px 30px; border-radius: 5px; font-size: 18px; }
-  footer p { font-size: 14px; padding-top: 10px; }
-  @media (max-width: 768px) { .hero h2 { font-size: 30px; } }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SecureAuthAPI - Seamless Authentication Solutions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            background-color: #f4f4f9;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #1d3557;
+            color: #f1faee;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .intro {
+            background-color: #457b9d;
+            color: #f1faee;
+            padding: 40px 20px;
+            text-align: center;
+        }
+        .intro p {
+            font-size: 1.2em;
+        }
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 40px 0;
+        }
+        .feature {
+            background-color: #e9ecef;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin: 20px;
+            padding: 20px;
+            flex: 1 1 30%;
+            max-width: 30%;
+            text-align: center;
+        }
+        .feature h3 {
+            color: #1d3557;
+        }
+        footer {
+            background-color: #1d3557;
+            color: #f1faee;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+        @media (max-width: 768px) {
+            .features {
+                flex-direction: column;
+                align-items: center;
+            }
+            .feature {
+                max-width: 80%;
+            }
+        }
+    </style>
 </head>
 <body>
-<header>
-  <div class="container">
-    <h1>SecureAuthAPI</h1>
-  </div>
-</header>
-<section class="hero">
-  <h2>Seamless & Robust Authentication</h2>
-  <p>Reduce development time and build secure authentication into your application effortlessly.</p>
-  <a href="#features">Learn More</a>
-</section>
-<section class="features" id="features">
-  <div class="container">
-    <div class="feature">
-      <h3>Easy Integration</h3>
-      <p>Integrate in minutes with comprehensive documentation and support.</p>
+    <header>
+        <div class="container">
+            <h1>SecureAuthAPI</h1>
+        </div>
+    </header>
+    <div class="intro">
+        <div class="container">
+            <p>Providing developers with a seamless and robust authentication system, SecureAuthAPI reduces the time and cost associated with building secure user authentication from scratch.</p>
+        </div>
     </div>
-    <div class="feature">
-      <h3>Compliance & Security</h3>
-      <p>Keep your application secure with industry-standard compliance and protocols.</p>
+    <div class="container">
+        <section class="features">
+            <div class="feature">
+                <h3>Seamless Integration</h3>
+                <p>Integrate SecureAuthAPI effortlessly into your applications and ensure smooth user experiences.</p>
+            </div>
+            <div class="feature">
+                <h3>Comprehensive Compliance</h3>
+                <p>Stay compliant and secure with industry-standard authentication protocols and best practices.</p>
+            </div>
+            <div class="feature">
+                <h3>Focus on Core Development</h3>
+                <p>Allow your team to focus on core product development, while SecureAuthAPI handles authentication.</p>
+            </div>
+        </section>
     </div>
-    <div class="feature">
-      <h3>Focus on Core Development</h3>
-      <p>Let SecureAuthAPI handle authentication while you concentrate on your core product.</p>
-    </div>
-  </div>
-</section>
-<section class="cta">
-  <div class="container">
-    <p>Join thousands of developers building secure applications with SecureAuthAPI.</p>
-    <a href="#signup">Get Started</a>
-  </div>
-</section>
-<footer>
-  <div class="container">
-    <p>&copy; 2023 SecureAuthAPI, Inc. All rights reserved.</p>
-  </div>
-</footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 SecureAuthAPI. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
